# cogsworth

./: .flake8  .gitignore  .readthedocs.yaml  DCO Distances.ipynb  LICENSE  README.md  cosmic_gala.py  create_recent_history.py  environment.yml  galaxy.py  kicks.py  pyproject.toml  recoils.ipynb  requirements.txt  run.py  scratch.ipynb  setup.cfg  setup.py  test.py  test_sfh.py  translate.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-problem.md  feature_request.md  question.md  todo.md
.github/workflows/: joss_pdf.yml  pypi_upload.yml  python-package.yml  test_cogsworth.yml  test_notebooks.yml
FIRE/: ERIF.ipynb  Unlocking FIRE's potential.ipynb  boundedness_sims.slurm  dists_sn.slurm  fire_runner.py  get_supernova_distances.py  m11h_potential.yml  mass.ipynb  playing_with_FIRE.ipynb  runaway_observations.ipynb  sampling.ipynb  sims_supernovae.slurm  supernovae.ipynb
FIRE/helpers/: FIRECenterer.py  FIREMapper.py  meo_python_lib.py  readmap.py  readsnap.py  tomFIRE.py
FIRE/helpers/colors_sps/: colors_table.py  lum_mag_conversions.py
FIRE/notes/: notes_with_matt.md  questions_for_matt.md
case_studies/: merger_distances.py  plot_merger_distances.py
case_studies/kilonovae_sGRBs/: merger_distances.py
cogsworth/: __init__.py  citations.py  classify.py  events.py  galaxy.py  kicks.py  observables.py  plot.py  pop.py  sfh.py  utils.py
cogsworth/compas/: __init__.py  compas_config.yaml  file.py  pop.py  runSubmit.py  switchdefs.txt  temp_grid_file.txt  test.ipynb  test.py  tools.py  utils.py
cogsworth/fire/: __init__.py  centre.py  fire.py  pop.py  potential.py  readsnap.py  snap.py  utils.py
cogsworth/hydro/: Hydro Module Demo.ipynb  __init__.py  centre.py  m11h.yml  pop.py  potential.py  rewind.py  snap.py  test.py  utils.py
cogsworth/interop/: __init__.py
cogsworth/interop/compas/: file.py  pop.py  runner.py
cogsworth/interop/posydon/: README.md
cogsworth/obs/: __init__.py  mist.py  observables.py
cogsworth/tests/: optional_deps.py  prep_data.py  runtime.py  runtime.slurm  test_citations.py  test_classify.py  test_events.py  test_galaxy.py  test_hydro.py  test_kicks.py  test_mist.py  test_observables.py  test_plot.py  test_pop.py  test_sfh.py
cogsworth/tests/test_data/: hydro_test.iord  hydro_test.massform  hydro_test_like_FIRE  hydro_test_like_FIRE.iord.pynbody-meta
data/: README.md
docs/: Makefile  conf.py  getting_started.rst  hacks.py  index.rst  install.rst  modules.rst  requirements.txt
docs/_static/: custom.css  custom.js  signika.css
docs/api/: kicker.classify.determine_final_classes.rst  kicker.classify.list_classes.rst  kicker.events.identify_events.rst  kicker.galaxy.Frankel2018.rst  kicker.galaxy.Galaxy.rst  kicker.galaxy.complicate_params.rst  kicker.galaxy.load.rst  kicker.galaxy.simplify_params.rst  kicker.kicks.get_kick_differential.rst  kicker.kicks.integrate_orbit_with_events.rst  kicker.observables.add_mags.rst  kicker.observables.get_absolute_bol_lum.rst  kicker.observables.get_absolute_mag.rst  kicker.observables.get_apparent_mag.rst  kicker.observables.get_extinction.rst  kicker.observables.get_log_g.rst  kicker.observables.get_phot.rst  kicker.pop.Population.rst  kicker.pop.load.rst
docs/case_studies/: binaries_and_potentials.ipynb  ce_plus_potentials.ipynb  fire.ipynb  sigma_plus_potentials.ipynb
docs/modules/: changelog.rst  classify.rst  events.rst  fire.rst  galaxy.rst  hydro.rst  interop.rst  kicks.rst  observables.rst  plot.rst  pop.rst  sfh.rst  utils.rst
docs/pages/: about.rst  case_studies.rst  cite.ipynb  cite.rst  feedback.rst  getting_started.ipynb  getting_started.rst  install.rst  learning.rst  modules.rst  tutorials.rst
docs/tutorials/: cosmic.ipynb  gaia.ipynb  gala.ipynb  getting_started.ipynb  initial_galaxy.ipynb  observables.ipynb  pop_io.ipynb  pop_synth.ipynb  pops.ipynb  potentials.ipynb  sampling.ipynb  subpops.ipynb  test.ipynb
docs/tutorials/basics/: outputs.ipynb  pop_io.ipynb  pops.ipynb
docs/tutorials/hydro/: pop.ipynb  prep.ipynb
docs/tutorials/misc/: dfs.ipynb  lisa.ipynb  runtime.ipynb
docs/tutorials/observables/: gaia.ipynb  photometry.ipynb
docs/tutorials/output_analysis/: rerun.ipynb  subpops.ipynb
docs/tutorials/pop_settings/: initial_galaxy.ipynb  pop_synth.ipynb  potentials.ipynb  sampling.ipynb
docs/tutorials/pop_synth_codes/: compas.ipynb  compas_config.yaml
docs/tutorials/potentials/: evolving_potentials.ipynb
docs/tutorials/visualisation/: binary_evolution.ipynb  gala.ipynb  sky_plots.ipynb
examples/: README.rst  plot_ZRt_Wagg2022.py  plot_cartoon.py  plot_cmd.py  plot_disrupted_pairs.py  plot_disruption.py  plot_healpix.py  plot_heights.py  plot_initial_periods.py  plot_kick_vs_nokick_lb.py  plot_sfh_cube.py  plot_sin.py  plot_sky.py  plot_tams_times.py
kicker/: __init__.py  classify.py  events.py  galaxy.py  kicks.py  observables.py  pop.py  run.py
kicker/tests/: test_classify.py  test_events.py  test_galaxy.py  test_observables.py  test_pop.py
online-interface/: app.py  potentials.py  queue_db.py  requirements.txt  worker.py
online-interface/.streamlit/: config.toml
paper/ApJS/: apjs_paper.tex  paper.bbl  paper.pyg  paper.tex
paper/ApJS/bibs/: paper.bib  software.bib
paper/ApJS/minted/: C4EECB2BDAA2F37734D5207F6180BE23BC501FA070CFA12460E1EAFDDF6B60A9.pygtex  tango.pygstyle
paper/ApJS/styles/: abbreviations.sty  docs_icons.sty  todo_notes.sty
paper/JOSS/: paper.bib  paper.md
src/cogsworth/: __init__.py  citations.py  classify.py  plot.py  pop.py  sfh.py  utils.py
src/cogsworth/hydro/: __init__.py  pop.py  potential.py  utils.py
src/cogsworth/interop/: __init__.py
src/cogsworth/obs/: __init__.py  mist.py  observables.py
tests/: runtime.py  test_citations.py  test_classify.py  test_events.py  test_hydro.py  test_interop.py  test_mist.py  test_observables.py  test_plot.py  test_pop.py  test_sfh.py
tests/test_data/: hydro_test.amiga.grp  hydro_test.massform.pynbody-meta  params.ini
tests/test_data/COMPAS_Output/: README.md
tests/test_data/COMPAS_Output_1/: Run_Details  switchdefs.txt  (+1 more)
webapp/: run.sh  worker.py
(+5 files in other folders)
