[metadata]
name = kicker
url = https://github.com/TomWagg/cosmic-gala
author = Tom Wagg
author_email = tomjwagg@gmail.com
license = MIT
license_files = LICENSE
description = Todo
long_description = file: README.md
long_description_content_type = text/markdown

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml
#   - install.rst

[options]
python_requires = >=3.8
packages = find: 
install_requires = 
    numpy
    pip
    matplotlib
    gsl
    astropy
    scipy
    jupyter
    jupyterlab
    ipython
    seaborn
    pandas
    gala >= 1.5
    cosmic-popsynth

[options.package_data]
* = *.npy, *.npz

[options.extras_require]
test = 
    pytest
docs = 
    sphinx
    matplotlib

[tool:pytest]
testpaths = "kicker"

[coverage:run]
omit =
    kicker/tests/*
    kicker/__init__.py
    setup.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError

[flake8]
max-line-length = 110