[metadata]
name = kicker
url = https://github.com/TomWagg/cosmic-gala
author = Tom Wagg
author_email = tomjwagg@gmail.com
license = MIT
license_files = LICENSE
description = Todo
long_description = file: README.md
long_description_content_type = text/markdown

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml
#   - install.rst

[options]
python_requires = >=3.10
packages = find: 
install_requires = 
    numpy == 1.23
    numba == 0.57
    pip
    matplotlib
    astropy
    scipy >= 1.7.3
    pandas
    gala >= 1.6
    cosmic-popsynth >= 3.4.7
    nose
    tables
    isochrones @ git+https://github.com/TomWagg/isochrones.git
    dustmaps
    healpy
    gaiaunlimited

[options.package_data]
* = *.npy, *.npz

[options.extras_require]
test = 
    pytest
docs = 
    sphinx
    matplotlib

[tool:pytest]
addopts = --cov-report xml:cov.xml --cov kicker
testpaths = "kicker"

[coverage:run]
omit =
    kicker/tests/*
    kicker/__init__.py
    setup.py
concurrency = multiprocessing

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # don't worry about showing plots
    plt.show()

[flake8]
max-line-length = 110
exclude = **__init__.py
extend-ignore = E402