[metadata]
name = cogsworth
url = https://github.com/TomWagg/cogsworth
author = Tom Wagg
author_email = tomjwagg@gmail.com
license = MIT
license_files = LICENSE
description = A framework for performing self-consistent population synthesis and orbital integration
long_description = file: README.md
long_description_content_type = text/markdown

# NOTE: any changes in the requirements must also be reflected in
#   - environment.yml
#   - install.rst

[options]
python_requires = >=3.10
packages = find: 
install_requires = 
    numpy == 1.23
    numba == 0.57
    pip
    matplotlib >= 3.7
    astropy >= 5.0, < 6.0
    scipy >= 1.8
    pandas >= 2.1
    gala >= 1.7
    cosmic-popsynth >= 3.4.10

[options.package_data]
* = *.npy, *.npz

[options.extras_require]
all =
    %(observables)s
    %(actions)s
    %(test)s
    %(docs)s
extras =
    %(observables)s
    %(actions)s
    %(hydro)s
    %(lisa)s
observables = 
    nose
    tables
    isochrones @ git+https://github.com/TomWagg/isochrones.git
    dustmaps
    healpy
    gaiaunlimited >= 0.2.0
actions = 
    agama
lisa =
    legwork >= 0.4.6
hydro = 
    pynbody
test = 
    %(observables)s
    %(lisa)s
    %(hydro)s
    pytest
    flake8
    coverage
    pytest-xdist
    nbmake
    pytest-cov
docs = 
    %(observables)s
    %(hydro)s
    sphinx<7.2
    matplotlib
    nbsphinx>=0.8.6
    numpydoc
    pydata-sphinx-theme
    sphinx_automodapi
    sphinxcontrib.bibtex
    IPython
    ipykernel
    sphinx_copybutton
    sphinx-gallery>=0.13.0
    sphinx-design>=0.4.1
    sphinx_togglebutton

[tool:pytest]
addopts = --cov-report xml:cov.xml --cov cogsworth -n='auto'
testpaths = "cogsworth"

[coverage:run]
omit =
    cogsworth/tests/*
    cogsworth/__init__.py
    setup.py
concurrency = multiprocessing

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # don't worry about showing plots
    plt.show()

[flake8]
max-line-length = 110
exclude = **__init__.py
extend-ignore = E402